--- a/src/assets/projectData.json
+++ b/src/assets/projectData.json
@@ -2,7 +2,6 @@
   "snoozeOrLooze": {
     "title": "Snooze Or Looze",
     "description": "Snooze Or Looze is a debate visual novel game similar to Ace Attorney but mixed in with a card game. Play as Derek and collect arguments cards that will then be used to debate a clock on whether you need to wake up or not. Good arguments will lead to an ending of Derek going back to sleep while bad arguments will force Derek to wake up.",
-    "reason": "This game was created for the Clark University IGDA September 2024 Harvest Game Jam with the theme 'It's time to wake up'",
     "link": {
       "site": [
         "itch.io"
@@ -46,7 +45,6 @@
   "duckGame": {
     "title": "Don't Feed the Duck",
     "description": "Don't Feed The Duck is a platformer set in a city with a bakery. Our duck wants to get into the bakery for their favorite snacks. Gain new abilities as you collect bread crumbs around the city. Break into the bakery and escape with your bread!",
-    "reason": "This game was created for the final project of my Game Design Fundamentals Class. It was then improved over time by me",
     "link": {
       "site": [
         "itch.io"
@@ -92,7 +90,6 @@
   "bellicose": {
     "title": "Bellicose",
     "description": "Bellicose is a 2D local fighting game utilizing a pixel art style and implements typical fighting game mechanics such as different height blocks/attacks, staggering attacks, different special abilities between characters, and more to pit two players against each other in a skill-based combat system. The name 'Bellicose' means 'demonstrating aggression and willingness to fight'.",
-    "reason": "This game was created for the Clark University IGDA Feburary 2024 Frenzy Game Jam with the theme 'RETRO'",
     "link": {
       "site": [],
       "url": [],
@@ -129,7 +126,6 @@
   "condemned": {
     "title": "Condemned",
     "description": "A 3D psychological horror game with a bit of action. You panic after having being bitten by a spider in the woods. As you try to piece together was has and will happen to you, you run into some stranger's journal entries that only further disorient you. As you follow the journal pages you unknowingly are heading closer and closer to the source of all your misfortune. You enter the  colosseum that you were lead to and find, Throndir, the creature you will need to defeat to avoid the fate of being cursed as a spider.",
-    "reason": "This game was created for the Clark University IGDA October 2024 Halloween Game Jam with the theme 'Break the Curse!",
     "link": {
       "site": [
         "itch.io"
@@ -142,7 +138,13 @@
       ]
     },
     "images": [
-      "/images/Condemned/Condemned_Title.png"
+      "/images/Condemned/Condemned_Title.png",
+      "/images/Condemned/Condemned_1.png",
+      "/images/Condemned/Condemned_2.png",
+      "/images/Condemned/Condemned_3.png",
+      "/images/Condemned/Condemned_4.png",
+      "/images/Condemned/Condemned_5.png",
+      "/images/Condemned/Condemned_6.png"
     ],
     "role": [
       "Programmer"
@@ -171,7 +173,6 @@
   "alexBank": {
     "title": "Escape Alex Bank",
     "description": "A 2D platformer with a time limit to complete the game. Play as the raccoon criminal, Roudini, and help him escape from Alex Bank. Dodge guards, lasers, and other obstacles while collecting the keycards that allow you to exit each room as you make your escape.",
-    "reason": "This game was created for the Clark University IGDA 2024 January Game Jamboree with the theme 'Escape'",
     "link": {
       "site": [
         "itch.io"
@@ -213,7 +214,6 @@
   "starboundWanderers": {
     "title": "Starbound Wanderers",
     "description": "Starbound Wanderers is an isometric 2D RPG that follows Zhenyang and Kaveh, two gay lovers who haverunaway from their planet to be together. They crash landed on a foreign planet and maintain their relationship while surviving the wilderness of their new home. Switch between the characters to utilize their different skill sets. Explore this new planet to see what can be used to survive and how they can turn it into home",
-    "reason": "This game started development for Jay Lam's game studio class at Clark University before officially going under his indie studio, Studio Blue Jay",
     "link": {
       "site": [],
       "url": [],
@@ -244,7 +244,6 @@
   "sunnysideTravels": {
     "title": "",
     "description": "",
-    "reason": "",
     "link": {
       "site": [],
       "url": [],
@@ -263,7 +262,6 @@
   "customBingo": {
     "title": "Custom Bingo Generator",
     "description": "This is a project that uses React.js and CSS to generate a custom bingo board by inserting your own spaces. There are popups that show the entire details in the case where the inputted text is too long for the text. You are able to click on each individual space to mark it, with the middle space always being a 'free space'.",
-    "reason": "A simple project created to learn the basics of react.js",
     "link": {
       "site": [
         "Try Here!",
@@ -307,7 +305,6 @@
   "leagueStatTracking": {
     "title": "LoL Stat Tracking Tool",
     "description": "This project utlizes the Riot Games API with python to find the stats of an inputed Riot ID. This tool then saves the data in a file that can be transferred to a google sheet to organize it. This tool was utilized by the Clark University LoL team for scouting opponents",
-    "reason": "This project was done as my final project for my 'Intro to Computing' class. The Riot API was also something I wanted to work with for a while.",
     "link": {
       "site": [],
       "url": [],
@@ -343,7 +340,6 @@
   "ticTacToe": {
     "title": "TicTacToe Gamemodes",
     "description": "This project creates a GUI using the Java Swing Library to play tic-tac-toe gamemodes. You are able to play regular, against random AI, against an unbeatable AI, a gamemode where each player can only have 3 symbols on the board at one time. It is very easily adaptable to allow for more gamemodes",
-    "reason": "A project that was inspired by that 3 symbol gamemode I came up with. I used this as an opportunity to learn GUIs and source control in high school.",
     "link": {
       "site": [
         "github"
@@ -378,5 +374,118 @@
       "Created a GUI using Java Swing to make it playable outside of the terminal"
     ],
     "video": ""
+  },
+
+  "rerender": {
+    "title": "Rerender",
+    "description": "In a post-earthquake city, you play as Aria, navigate the shattered streets, deliver critical supplies, use materials to upgrade buildings and scooters, as well as   collaborate with restaurant owners to restore their homes together.",
+    "link": {
+      "site": [
+        "itch.io"
+      ],
+      "url": [
+        "https://veerstudio.itch.io/rerender"
+      ],
+      "type": [
+        "external"
+      ]
+    },
+    "images": [
+      "/images/Rerender/Rerender_Title.jpg",
+      "/images/Rerender/Rerender_Cinematic_Shot.png",
+      "/images/Rerender/Rerender_Gameplay_1.png",
+      "/images/Rerender/Rerender_Gameplay_2.png",
+      "/images/Rerender/Rerender_Quest_UI.png",
+      "/images/Rerender/Rerender_Restaurant_UI.png",
+      "/images/Rerender/Rerender_Gameplay_3.png"
+    ],
+    "role": [
+      "Programmer"
+    ],
+    "team": [
+      "Kael Chen",
+      "HO Ka-yeung",
+      "Lucas Feng",
+      "Sarah Nim",
+      "Xinyi Luo",
+      "Joshua Talavera",
+      "William Titus",
+      "Sonya Sataeva",
+      "Kenny Cook",
+      "Guangyi Chen",
+      "Karen Bonilla",
+      "Lilly Trentacosta",
+      "Ryan Tarpey"
+    ],
+    "technologies": [
+      "Unreal Engine 5",
+      "UE Blueprints",
+      "PlasticSCM"
+    ],
+    "contributions": [
+      "Created a save/load system in Unreal Engine that allowed to player to keep their progress throughout the game",
+      "Reworked the entire quest/restaurant upgrading system and included a tutorial to introduce the player to the system",
+      "Implemented the funtionality of the UI for restaurants and vehicle upgrading"
+    ],
+    "video": "videos/Rerender25PV.mp4"
+  },
+
+  "kamikaze": {
+    "title": "KamiKaZe",
+    "description": "KamiKaZe is a neon-soaked free-for-all brawler where you spawn with a Rifle, a Pistol, and your trusty Katana—and then the mayhem begins. Use quick reflexes, grab unpredictable powerups, and make every second count as you blast, slice, and bounce your friends off the map.",
+    "link": {
+      "site": [
+        "Steam"
+      ],
+      "url": [
+        "https://store.steampowered.com/app/3688610/KamiKaZe/"
+      ],
+      "type": [
+        "external"
+      ]
+    },
+    "images": [
+      "/images/KamiKaZe/Kamikaze_Title.jpg",
+      "/images/KamiKaZe/Kamikaze_City_1.png",
+      "/images/KamiKaZe/Kamikaze_City_2.png",
+      "/images/KamiKaZe/Kamikaze_4Player_Gameplay.jpg",
+      "/images/KamiKaZe/Kamikaze_2Player_Gameplay.jpg",
+      "/images/KamiKaZe/Kamikaze_Forest_1.png",
+      "/images/KamiKaZe/Kamikaze_Forest_2.png"
+    ],
+    "role": [
+      "Programmer"
+    ],
+    "team": [
+      "Vamsi Varra (Banty Parker)",
+      "Yaksh Goyani",
+      "Autumn Powers",
+      "Pablo E. Acosta",
+      "Chase Burdin",
+      "Ryan Kattau",
+      "Phillip Tierney",
+      "Ben Clingen",
+      "David Macrae",
+      "Karan Adepu",
+      "Benjamin Miller",
+      "Andrei Tietjen",
+      "Ooyama Aina",
+      "Tenzin Sommer",
+      "Beo Singhatat",
+      "Aidan Hall",
+      "Jacob Cz"
+    ],
+    "technologies": [
+      "Unreal Engine 5",
+      "UE Blueprints",
+      "PlasticSCM"
+    ],
+    "contributions": [
+      "Implemented core combat mechanics including bullet tracers, reloading, and ammo tracking to improve player feedback and immersion.",
+      "Introduced new weapons (sniper rifle and rocket launcher) to diversify combat styles and enhance gameplay dynamics.",
+      "Developed environmental features such as bounce pads and icy floors, designed for easy integration by level designers to create unique maps.",
+      "Designed and integrated power-ups (snowball and paintball), adding freezing and visual screen-obscuring effects to expand strategic gameplay."
+    ],
+    "video": "videos/KamiKazeTrailer.mp4"
   }
 }
